회원 비밀번호 변경 및 휴면 계정 활성화 기능 구현

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -2,3 +2,5 @@
 NotBlank = This field is required
 DuplicateEmail = Duplicate email
 InvalidEmailOrAuthCode = Invalid email or verification code
+InvalidEmail = Invalid email
+PasswordMismatch = Password mismatch
